--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_activity_main_menu">MainMenu</string>
     <string name="internet_connection_error">Seems like you are having trouble connecting to
     internet</string>
+    <string name="title_activity_select_opponent">SelectOpponentActivity</string>
 </resources>
